<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/avatar"
                app:civ_border_color="#FDD835"
                app:civ_border_width="5dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/up_img"
                android:textColor="#000000"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#000000" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/inp_background"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/inp_background"
                android:ems="10"
                android:hint="@string/emal"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/inp_background"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="10dp"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/inp_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#000000" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_gradient"
                android:text="@string/front_sgn_btn_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/cardview_shadow_end_color"
                app:backgroundTintMode="src_over" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view2"
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/or" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/ggl_bg"
                    android:drawableStart="@drawable/google"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/reg_gl"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/fb_bg"
                    android:drawableStart="@drawable/facebook"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/reg_fb"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/already_acc"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>