<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                app:tint="@color/tnt"
                app:srcCompat="@drawable/splash_ico"
                app:tintMode="src_in" />

            <TextView
                android:id="@+id/front_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/aladin"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/front_name"
                android:textColor="@color/gl"
                android:textSize="60sp" />




            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/inp_background"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="10dp"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/inp_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#000000" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_gradient"
                android:text="@string/front_log_btn_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/cardview_shadow_end_color"
                app:backgroundTintMode="src_over" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view2"
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/lg_with" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/ggl_bg"
                    android:drawableStart="@drawable/google"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/reg_gl"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/fb_bg"
                    android:drawableStart="@drawable/facebook"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/reg_fb"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/no_acc"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>